force-app/main/default/objects/Contact_Skill__c/Contact_Skill__c.object-meta.xml
<CustomObject>
    <description>Links Contact to Skill with proficiency level - many-to-many junction</description>
    <label>Contact Skill</label>
    <nameField>
        <label>Contact Skill Name</label>
        <type>AutoNumber</type>
        <displayFormat>CS-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Contact Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>