force-app/main/default/objects/Contact_Skill__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contact who has this skill</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Skills</relationshipLabel>
    <relationshipName>Contact_Skills</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>