force-app/main/default/objects/Contact_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Skill from the master list</description>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Contact Skills</relationshipLabel>
    <relationshipName>Contact_Skills</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>